samples/_failures_safe/1761078428_1373a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba8f240f.c: In function ‘main’:
./samples/SAFE/__tmp_ba8f240f.c:141:12: error: missing terminating " character
  141 |     printf("\nCompressed data (%zu
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ba8f240f.c:141:5: error: expected expression at end of input
  141 |     printf("\nCompressed data (%zu
      |     ^~~~~~
./samples/SAFE/__tmp_ba8f240f.c:141:5: error: expected declaration or statement at end of input
